--- a/public/admin-login.html
+++ b/public/admin-login.html
@@ -221,7 +221,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        const API_URL = 'http://localhost:3332/api'; // Change this to your backend URL
+        const API_URL = 'https://philucky.circularityspace.com/api'; // Change this to your backend URL
 
         function togglePassword() {
             const passwordInput = document.getElementById('password');
