--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -451,7 +451,11 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        const API_URL = 'http://localhost:3332/api';
+        // API_URL is injected from server environment via window.ENV
+        const API_URL = window.ENV?.API_URL || 'http://localhost:3332/api';
+        
+        console.log('Using API URL:', API_URL);
+        
         let currentFilter = '';
         let adminData = {};
 
