no philucky link

--- a/public/app-guide.html
+++ b/public/app-guide.html
@@ -263,40 +263,6 @@
             font-weight: bold;
             margin-left: 8px;
         }
-
-        .website-link {
-            background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
-            padding: 25px;
-            border-radius: 15px;
-            text-align: center;
-            margin: 20px 0;
-        }
-
-        .website-link h3 {
-            color: var(--dark-bg);
-            margin-bottom: 15px;
-            font-size: 1.3rem;
-        }
-
-        .website-btn {
-            background: var(--dark-bg);
-            color: var(--primary-color);
-            padding: 15px 30px;
-            border-radius: 30px;
-            text-decoration: none;
-            font-weight: bold;
-            font-size: 1.1rem;
-            display: inline-flex;
-            align-items: center;
-            gap: 10px;
-            transition: all 0.3s;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-        }
-
-        .website-btn:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4);
-        }
     </style>
 </head>
 <body>
@@ -318,8 +284,8 @@
         <div class="info-box">
             <strong><i class="fas fa-info-circle"></i> About This App</strong>
             <p style="color: var(--text-secondary); line-height: 1.6;">
-                This app is designed to help you <strong style="color: var(--text-primary);">learn game rules and strategies</strong> before playing. 
-                No real money is used in this app. To play with real money, visit our main website.
+                This app is designed to help you <strong style="color: var(--text-primary);">learn game rules and strategies</strong>. 
+                This is a purely educational platform with no real money involved.
             </p>
         </div>
 
@@ -334,21 +300,14 @@
                     <div class="step-number">1</div>
                     <div class="step-content">
                         <h3>Create Your Account</h3>
-                        <p>Tap on "Sign Up" and enter your phone number, password, and optional email to access the learning guides.</p>
+                        <p>Tap on "Sign Up" and enter your phone number, password, and optional email to create your account instantly.</p>
                     </div>
                 </li>
                 <li class="step-item">
                     <div class="step-number">2</div>
                     <div class="step-content">
-                        <h3>Wait for Approval</h3>
-                        <p>Our team will review and approve your account within 24-48 hours to ensure platform security.</p>
-                    </div>
-                </li>
-                <li class="step-item">
-                    <div class="step-number">3</div>
-                    <div class="step-content">
-                        <h3>Login & Learn</h3>
-                        <p>Use your phone number or email to login. Once approved, you'll have access to all our game guides and tutorials!</p>
+                        <h3>Login & Start Learning</h3>
+                        <p>Use your phone number or email to login and immediately access all our game guides and tutorials!</p>
                     </div>
                 </li>
             </ol>
@@ -365,7 +324,7 @@
                 What You'll Learn <span class="badge">FREE</span>
             </div>
             <p style="color: var(--text-secondary); margin-bottom: 20px;">
-                Master casino games before playing for real money. Our guides cover:
+                Master casino games with our comprehensive educational guides covering:
             </p>
 
             <div class="feature-grid">
@@ -398,17 +357,6 @@
                     <p>Avoid costly errors made by beginners</p>
                 </div>
             </div>
-        </div>
-
-        <!-- Play for Real Money -->
-        <div class="website-link">
-            <h3><i class="fas fa-globe"></i> Ready to Play for Real?</h3>
-            <p style="color: var(--dark-bg); opacity: 0.9; margin-bottom: 15px;">
-                Visit our main website to play with real money
-            </p>
-            <a href="https://philucky.com" class="website-btn" target="_blank">
-                <i class="fas fa-external-link-alt"></i> Visit Philucky.com
-            </a>
         </div>
 
         <!-- Features -->
@@ -480,8 +428,8 @@
                 <li class="step-item">
                     <div class="step-number">4</div>
                     <div class="step-content">
-                        <h3>Practice on Main Site</h3>
-                        <p>When you're ready, visit Philucky.com to practice and play with real money.</p>
+                        <h3>Review and Master</h3>
+                        <p>Revisit guides as needed to reinforce your understanding and master the concepts.</p>
                     </div>
                 </li>
             </ol>
@@ -499,18 +447,11 @@
                     <i class="fas fa-chevron-right"></i> Is this app for real money gaming?
                 </div>
                 <div class="faq-answer">
-                    No, this app is purely educational. It provides guides and tutorials to help you learn casino games. To play with real money, visit our main website at Philucky.com.
+                    No, this app is purely educational. It provides guides and tutorials to help you learn casino games. No real money is used in this app.
                 </div>
             </div>
 
-            <div class="faq-item">
-                <div class="faq-question">
-                    <i class="fas fa-chevron-right"></i> How long does approval take?
-                </div>
-                <div class="faq-answer">
-                    Account approval typically takes 24-48 hours. Our team reviews each registration to ensure platform security.
-                </div>
-            </div>
+
 
             <div class="faq-item">
                 <div class="faq-question">
@@ -526,16 +467,7 @@
                     <i class="fas fa-chevron-right"></i> Do I need to deposit money?
                 </div>
                 <div class="faq-answer">
-                    No deposits are needed for this guide app. All content is free. When you're ready to play for real money, visit Philucky.com.
-                </div>
-            </div>
-
-            <div class="faq-item">
-                <div class="faq-question">
-                    <i class="fas fa-chevron-right"></i> How do I play with real money?
-                </div>
-                <div class="faq-answer">
-                    Visit our main website at Philucky.com where you can create an account, deposit funds using M-Pesa or other payment methods, and start playing.
+                    No deposits are needed. All content in this guide app is completely free and educational.
                 </div>
             </div>
 
@@ -556,14 +488,13 @@
                 Responsible Gaming
             </div>
             <div class="alert-box">
-                <strong><i class="fas fa-heart"></i> Before Playing for Real Money:</strong>
+                <strong><i class="fas fa-heart"></i> Important Reminders:</strong>
                 <ul style="margin-top: 10px; margin-left: 20px; color: var(--text-secondary);">
-                    <li>Only play with money you can afford to lose</li>
-                    <li>Set a budget and stick to it</li>
-                    <li>Never chase losses</li>
-                    <li>Take regular breaks</li>
+                    <li>This is an educational platform only</li>
+                    <li>Learn responsibly and at your own pace</li>
+                    <li>Understanding game mechanics helps make informed decisions</li>
+                    <li>Knowledge is power - use it wisely</li>
                     <li>Gaming should be fun, not stressful</li>
-                    <li>Seek help if gambling becomes a problem</li>
                 </ul>
             </div>
         </div>
@@ -594,7 +525,6 @@
         <div style="text-align: center; padding: 20px; color: var(--text-secondary); font-size: 0.9rem;">
             <p>&copy; 2025 Philucky. All rights reserved.</p>
             <p style="margin-top: 10px;">
-                <a href="https://philucky.com" style="color: var(--primary-color); text-decoration: none; margin: 0 10px;">Visit Main Site</a>
                 <a href="#" style="color: var(--primary-color); text-decoration: none; margin: 0 10px;">Privacy Policy</a>
                 <a href="#" style="color: var(--primary-color); text-decoration: none; margin: 0 10px;">Terms of Service</a>
             </p>
