--- a/public/privacy.html
+++ b/public/privacy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Philucky</title>
+    <title>Privacy Policy - Philucky Game Guide</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -225,6 +225,18 @@
             text-decoration: none;
             margin: 0 10px;
         }
+
+        .warning-box {
+            background: rgba(255, 107, 107, 0.1);
+            border-left: 4px solid var(--secondary-color);
+            padding: 20px;
+            border-radius: 8px;
+            margin: 20px 0;
+        }
+
+        .warning-box strong {
+            color: var(--secondary-color);
+        }
     </style>
 </head>
 <body>
@@ -265,17 +277,29 @@
         <div class="section" id="introduction">
             <h2><i class="fas fa-info-circle"></i> 1. Introduction</h2>
             <p>
-                Welcome to Philucky ("we," "our," or "us"). We are committed to protecting your privacy and personal information. 
+                Welcome to Philucky Game Guide ("we," "our," or "us"). We are committed to protecting your privacy and personal information. 
                 This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our mobile 
                 application and services (collectively, the "Service").
             </p>
-            <div class="highlight-box">
-                <strong><i class="fas fa-exclamation-circle"></i> Important Notice:</strong> 
-                This app is designed for educational purposes to help users learn about casino games. No real money transactions 
-                occur within this app. For actual gaming with real money, please visit our main website.
+            <div class="warning-box">
+                <strong><i class="fas fa-exclamation-triangle"></i> IMPORTANT - EDUCATIONAL CONTENT ONLY:</strong>
+                <p style="margin-top: 10px; color: var(--text-secondary);">
+                    This app provides EDUCATIONAL CONTENT ONLY about card games and game strategies. This app does NOT:
+                </p>
+                <ul style="margin-top: 10px; margin-left: 20px; color: var(--text-secondary);">
+                    <li>Allow users to wager, stake, or bet real money</li>
+                    <li>Facilitate any form of real-money gambling or gaming</li>
+                    <li>Process any financial transactions or payments</li>
+                    <li>Enable users to win real money or prizes of monetary value</li>
+                    <li>Connect to or promote any real-money gambling services</li>
+                    <li>Contain simulated gambling features with in-app purchases</li>
+                </ul>
+                <p style="margin-top: 10px; color: var(--text-secondary);">
+                    All content is purely informational and educational in nature, designed to teach game rules and strategies.
+                </p>
             </div>
             <p>
-                By using the Philucky app, you agree to the collection and use of information in accordance with this policy. 
+                By using the Philucky Game Guide app, you agree to the collection and use of information in accordance with this policy. 
                 If you do not agree with our policies and practices, please do not use our Service.
             </p>
         </div>
@@ -297,7 +321,7 @@
             <p>When you use our app, we may automatically collect:</p>
             <ul>
                 <li><strong>Device Information:</strong> Device type, operating system, unique device identifiers</li>
-                <li><strong>Usage Data:</strong> Which guides you view, time spent in app, interaction patterns</li>
+                <li><strong>Usage Data:</strong> Which educational guides you view, time spent in app, interaction patterns</li>
                 <li><strong>Log Data:</strong> IP address, browser type, access times, pages viewed</li>
                 <li><strong>App Performance Data:</strong> Crash reports, diagnostic information</li>
             </ul>
@@ -306,7 +330,9 @@
             <div class="highlight-box">
                 <strong><i class="fas fa-check-circle"></i> We do NOT collect:</strong>
                 <ul style="margin-top: 10px; margin-bottom: 0;">
-                    <li>Financial information (no payments in this app)</li>
+                    <li>Financial information (credit cards, bank accounts, payment data)</li>
+                    <li>Gambling or betting history</li>
+                    <li>Real-money transaction data</li>
                     <li>Precise geolocation data</li>
                     <li>Contact lists or photos</li>
                     <li>Biometric data</li>
@@ -317,27 +343,28 @@
         <!-- How We Use -->
         <div class="section" id="how-we-use">
             <h2><i class="fas fa-tasks"></i> 3. How We Use Your Information</h2>
-            <p>We use your information for the following purposes:</p>
+            <p>We use your information solely for educational purposes:</p>
             
             <h3>3.1 Service Provision</h3>
             <ul>
                 <li>To create and manage your account</li>
                 <li>To authenticate your identity when you log in</li>
-                <li>To provide access to educational gaming guides</li>
+                <li>To provide access to educational gaming guides and tutorials</li>
                 <li>To personalize your learning experience</li>
+                <li>To track your progress through educational materials</li>
             </ul>
 
             <h3>3.2 Communication</h3>
             <ul>
                 <li>To send account-related notifications</li>
                 <li>To respond to your inquiries and support requests</li>
-                <li>To send updates about new guides or features (with your consent)</li>
+                <li>To send updates about new educational content (with your consent)</li>
             </ul>
 
             <h3>3.3 Improvement and Analytics</h3>
             <ul>
-                <li>To analyze app usage and improve our Service</li>
-                <li>To develop new features and content</li>
+                <li>To analyze app usage and improve our educational Service</li>
+                <li>To develop new features and educational content</li>
                 <li>To troubleshoot technical issues</li>
                 <li>To ensure platform security</li>
             </ul>
@@ -348,6 +375,16 @@
                 <li>To enforce our Terms of Service</li>
                 <li>To protect against fraud and abuse</li>
             </ul>
+
+            <div class="warning-box">
+                <strong><i class="fas fa-ban"></i> We do NOT use your information to:</strong>
+                <ul style="margin-top: 10px; margin-bottom: 0;">
+                    <li>Process gambling transactions</li>
+                    <li>Facilitate real-money betting or wagering</li>
+                    <li>Track gambling behavior or patterns</li>
+                    <li>Market gambling services</li>
+                </ul>
+            </div>
         </div>
 
         <!-- Data Security -->
@@ -369,7 +406,7 @@
             <ul>
                 <li>Limited employee access to personal data</li>
                 <li>Regular security audits and updates</li>
-                <li>Account approval process to prevent unauthorized access</li>
+                <li>Secure account management processes</li>
             </ul>
 
             <div class="highlight-box">
@@ -388,18 +425,29 @@
                 We do not sell, trade, or rent your personal information to third parties for marketing purposes.
             </p>
 
-            <h3>5.2 Limited Sharing</h3>
+            <h3>5.2 No Gambling-Related Sharing</h3>
+            <div class="warning-box">
+                <strong><i class="fas fa-ban"></i> We do NOT share your data with:</strong>
+                <ul style="margin-top: 10px; margin-bottom: 0;">
+                    <li>Gambling operators or casinos</li>
+                    <li>Betting platforms or services</li>
+                    <li>Real-money gaming services</li>
+                    <li>Payment processors for gambling transactions</li>
+                </ul>
+            </div>
+
+            <h3>5.3 Limited Sharing</h3>
             <p>We may share your information only in the following circumstances:</p>
             <ul>
-                <li><strong>Service Providers:</strong> Third-party services that help us operate (hosting, analytics)</li>
+                <li><strong>Service Providers:</strong> Third-party services that help us operate (hosting, analytics) - strictly for educational app functionality</li>
                 <li><strong>Legal Requirements:</strong> When required by law, court order, or government regulation</li>
                 <li><strong>Business Transfers:</strong> In connection with a merger, sale, or acquisition</li>
                 <li><strong>Protection of Rights:</strong> To protect our rights, safety, or property</li>
             </ul>
 
-            <h3>5.3 Data Retention</h3>
+            <h3>5.4 Data Retention</h3>
             <p>
-                We retain your personal information only as long as necessary to provide our services and comply with legal obligations. 
+                We retain your personal information only as long as necessary to provide our educational services and comply with legal obligations. 
                 You may request deletion of your account at any time.
             </p>
         </div>
@@ -440,16 +488,16 @@
             
             <h3>7.1 What We Use</h3>
             <p>
-                Our app uses minimal tracking technologies:
+                Our app uses minimal tracking technologies for educational purposes:
             </p>
             <ul>
                 <li><strong>Authentication Tokens:</strong> To keep you logged in</li>
-                <li><strong>Local Storage:</strong> To store app preferences</li>
-                <li><strong>Analytics:</strong> To understand app usage (anonymized)</li>
+                <li><strong>Local Storage:</strong> To store app preferences and learning progress</li>
+                <li><strong>Analytics:</strong> To understand how users interact with educational content (anonymized)</li>
             </ul>
 
             <h3>7.2 Third-Party Services</h3>
-            <p>We may use third-party analytics services that use cookies and similar technologies. These services are bound by their own privacy policies.</p>
+            <p>We may use third-party analytics services that use cookies and similar technologies. These services are bound by their own privacy policies and are used solely to improve our educational content.</p>
         </div>
 
         <!-- Children's Privacy -->
@@ -462,7 +510,8 @@
             </p>
             <div class="highlight-box">
                 <strong><i class="fas fa-exclamation-triangle"></i> Age Restriction:</strong> 
-                You must be 18 years or older to use this app. By using our Service, you represent that you are at least 18 years old.
+                You must be 18 years or older to use this app. By using our Service, you represent that you are at least 18 years old. 
+                This educational content is designed for adult learners.
             </div>
         </div>
 
@@ -523,13 +572,35 @@
             </p>
         </div>
 
+        <!-- Compliance Statement -->
+        <div class="section">
+            <h2><i class="fas fa-check-circle"></i> Google Play Store Compliance</h2>
+            <div class="highlight-box">
+                <strong><i class="fas fa-shield-alt"></i> Compliance Declaration:</strong>
+                <p style="margin-top: 10px; color: var(--text-secondary);">
+                    This app is in full compliance with Google Play Store policies. This app:
+                </p>
+                <ul style="margin-top: 10px; margin-left: 20px; color: var(--text-secondary);">
+                    <li>Does NOT enable or facilitate real-money gambling, wagering, or betting</li>
+                    <li>Does NOT process any financial transactions</li>
+                    <li>Does NOT allow users to win real money or prizes of monetary value</li>
+                    <li>Contains ONLY educational content about game rules and strategies</li>
+                    <li>Does NOT contain simulated gambling with in-app purchases</li>
+                    <li>Does NOT link to or promote real-money gambling services</li>
+                </ul>
+                <p style="margin-top: 10px; color: var(--text-secondary);">
+                    All content is purely informational and educational, designed to teach users about card games and game mechanics 
+                    without any gambling functionality.
+                </p>
+            </div>
+        </div>
+
         <!-- Footer -->
         <footer>
-            <p>&copy; 2025 Philucky. All rights reserved.</p>
+            <p>&copy; 2025 Philucky Game Guide - Educational Content Only. All rights reserved.</p>
             <p style="margin-top: 10px;">
                 <a href="/app-guide">App Guide</a>
                 <a href="/terms">Terms of Service</a>
-                <a href="https://philucky.com">Main Website</a>
             </p>
         </footer>
     </div>
